--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install
-    npm run build
+    npm --prefix /src/ install
+    npm --prefix /src/ run build
   displayName: 'npm install and build'
   
 - task: Npm@1
