--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm --prefix /src/ install
-    npm --prefix /src/ run build
+    npm install
+    npm run build
   displayName: 'npm install and build'
   
 - task: Npm@1
